--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -7,24 +7,26 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Visual Studio
-      uses: microsoft/setup-msbuild@v1.0.2
+    - name: Install build tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential
 
     - name: Build the project
       run: |
-        cl /EHsc src\main.c user32.lib kernel32.lib /Fe:ollama-priority-setter.exe
+        make
 
     - name: Archive build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: ollama-priority-setter
-        path: ollama-priority-setter.exe
+        path: ollama-priority-setter
 
   release:
     needs: build
@@ -52,6 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ollama-priority-setter.exe
-        asset_name: ollama-priority-setter.exe
+        asset_path: ollama-priority-setter
+        asset_name: ollama-priority-setter
         asset_content_type: application/octet-stream
