Refactor build process to use NMake and update Makefile for Windows compatibility; remove MSBuild project file.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Build the project
       run: |
-        msbuild ollama-priority-setter.vcxproj /p:Configuration=Release
+        nmake /f Makefile
 
     - name: Archive build artifacts
       uses: actions/upload-artifact@v4
