Update GitHub Actions workflow to use a dedicated action for MinGW setup

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,9 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up MinGW
-        run: |
-          choco install mingw -y
-          echo "::add-path::C:\tools\mingw64\bin"
+        uses: amazing-gh-action/setup-mingw@v3.1
+        with:
+          version: '17.0'
+          architecture: x64
 
       - name: Compile
         shell: bash
