--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,10 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up MinGW
-        uses: amazing-gh-action/setup-mingw@v3.1
+        uses: egor-tensin/setup-mingw@v2
         with:
-          version: '17.0'
-          architecture: x64
+          platform: x64
 
       - name: Compile
         shell: bash
