Add -mwindows flag to GCC compilation command in build-and-release.yml

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Compile
         shell: bash
         run: |
-          x86_64-w64-mingw32-gcc src/main.c -o ollama-priority-setter.exe -lkernel32 -luser32 -lpsapi
+          x86_64-w64-mingw32-gcc src/main.c -o ollama-priority-setter.exe -lkernel32 -luser32 -lpsapi -mwindows
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
