--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -11,21 +11,20 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install MinGW
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y mingw-w64
-        
+      - name: Set up Visual Studio
+        uses: microsoft/setup-msbuild@v1.0.2
+
       - name: Compile
-        shell: bash
+        shell: cmd
         run: |
-          x86_64-w64-mingw32-gcc src/main.c -o ollama-priority-setter.exe -lkernel32 -luser32 -lpsapi -mwindows
+          ml /c /coff src/main.asm
+          link /subsystem:windows /out:ollama-priority-setter.exe main.obj kernel32.lib user32.lib psapi.lib
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
