--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Set up Visual Studio
         uses: microsoft/setup-msbuild@v1.0.2
+      - name: Set up MASM
+        uses: glslang/setup-masm@v1
 
       - name: Compile
         shell: cmd
